strapi/strapi-part-2/blog-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: blog-frontend
spec:
  type: ClusterIP
  selector:
    app: blog-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
